Better better better tooltips and better quick join