@@ -55,10 +55,16 @@ public abstract class DrawContextMixin {
 
     @WrapOperation(method = "drawTooltip(Lnet/minecraft/client/font/TextRenderer;Ljava/util/List;IILnet/minecraft/client/gui/tooltip/TooltipPositioner;Lnet/minecraft/util/Identifier;)V",
             at = @At(value = "INVOKE", target = "Lnet/minecraft/client/gui/tooltip/TooltipPositioner;getPosition(IIIIII)Lorg/joml/Vector2ic;"))
-    private Vector2ic reposition(TooltipPositioner instance, int screenWidth, int screenHeight, int x, int y, int width, int height, Operation<Vector2ic> original) {
-        Vector2ic vector2ic = original.call(instance, screenWidth, screenHeight, x, y, width, height);
-        x = Math.max(6, Math.min(vector2ic.x(), screenWidth - width - 6));
-        y = Math.max(6, Math.min(vector2ic.y(), screenHeight - height - 6));
+    private Vector2ic reposition(TooltipPositioner instance, int screenWidth, int screenHeight, int mouseX, int mouseY, int width, int height, Operation<Vector2ic> original) {
+        Vector2ic vector2ic = original.call(instance, screenWidth, screenHeight, mouseX, mouseY, width, height);
+        int x = Math.max(6, Math.min(vector2ic.x(), screenWidth - width - 6));
+        int y = Math.max(6, Math.min(vector2ic.y(), screenHeight - height - 6));
+        if (x == 6 && y != 6) {
+            x = Math.clamp(mouseX - width / 2, 6, screenWidth - width - 6);
+            y = mouseY - height - 12;
+
+            if (y < 6) y = mouseY + 12;
+        }
         return new Vector2i(x, y);
     }
 }
